# boxing-schedule

./: README.md  boxing_schedule.ics  pyproject.toml  requirements.txt  scraper.py  tests.py
.claude/: settings.local.json
.github/workflows/: main.yml
fixtures/: events_api.json
